--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <title>Khoá học CFA tại ILIAT</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&subset=latin-ext,vietnamese" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./css/fonts/stylesheet.css">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&subset=latin-ext,vietnamese" rel="stylesheet">
 
-  <script src="https://npmcdn.com/jquery@3.1.0/dist/jquery.min.js"></script>
-  <script src="https://npmcdn.com/react@15.3.0/dist/react.js"></script>
-  <script src="https://npmcdn.com/react-dom@15.3.0/dist/react-dom.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 </head>
 <body>
   <section id="content"></section>
